[package]
name = "vlock"
version = "0.0.1"
resolver = "3"
edition = "2024"
rust-version = "1.85.0"


authors = ["Daniil Shreider <daniil.schroder@gmail.com>"]
description = "Versioned RwLock without Reader contention"
repository = "https://github.com/ReDestroyDeR/vlock"
license = "MIT"
license-file = "LICENSE"
keywords = ["lock", "sync", "rwlock", "concurrency"]
readme = "README.md"


[dependencies]
