[package]
name = "snaplock"
version = "0.0.1"
resolver = "3"
edition = "2024"
rust-version = "1.85.0"


authors = ["Daniil Shreyder <daniil.schroder@gmail.com>"]
description = "RwLock with wait-free Reads and sequential Writes"
repository = "https://github.com/ReDestroyDeR/snaplock"
license = "MIT"
license-file = "LICENSE"
keywords = ["sync", "rwlock", "concurrency", "wait-free"]
readme = "README.md"


[dependencies]
